fixed navbar overlapping content

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,900,400italic,700italic,900italic);
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700,900,400italic,700italic,900italic);
 * {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     background-color: #EBB471;
@@ -17,7 +15,6 @@ ul.menu {
   width: 100%;
 }
 li.menu {
-  /*border-right: 1px solid #bbb;*/
   float: left;
 }
 
@@ -29,17 +26,13 @@ a.menu {
   text-decoration: none;
 }
 .input_form {
-  margin-top: 60px ;
+  margin-top: 120px ;
 }
 
 .content {
-  margin-top: 60px ;
+  margin-top: 120px ;
 }
 
-.out_item {
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
-  font-weight: 100;
-}
 
 option, select {
   font-size: 16px;
